<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:text="@string/player_a" />

            <TextView
                android:id="@+id/player_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:textSize="48sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:text="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonRed"
                android:textColor="@color/colorButtonText"
                android:onClick="addOneforPlayerA"
                android:text="@string/red_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonYellow"
                android:textColor="@color/colorButtonText"
                android:onClick="addTwoforPlayerA"
                android:text="@string/yellow_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonGreen"
                android:textColor="@color/colorButtonText"
                android:onClick="addThreeforPlayerA"
                android:text="@string/green_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonBrown"
                android:textColor="@color/colorButtonText"
                android:onClick="addFourforPlayerA"
                android:text="@string/brown_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonBlue"
                android:textColor="@color/colorButtonText"
                android:onClick="addFiveforPlayerA"
                android:text="@string/blue_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonPink"
                android:textColor="@color/colorButtonText"
                android:onClick="addSixforPlayerA"
                android:text="@string/pink_btn" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonBlack"
                android:textColor="@color/colorButtonText"
                android:onClick="addSevenforPlayerA"
                android:text="@string/black_btn" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:text="@string/player_b" />

            <TextView
                android:id="@+id/player_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:textSize="48sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:text="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonRed"
                android:textColor="@color/colorButtonText"
                android:onClick="addOneforPlayerB"
                android:text="@string/red_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonYellow"
                android:textColor="@color/colorButtonText"
                android:onClick="addTwoforPlayerB"
                android:text="@string/yellow_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonGreen"
                android:textColor="@color/colorButtonText"
                android:onClick="addThreeforPlayerB"
                android:text="@string/green_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonBrown"
                android:textColor="@color/colorButtonText"
                android:onClick="addFourforPlayerB"
                android:text="@string/brown_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonBlue"
                android:textColor="@color/colorButtonText"
                android:onClick="addFiveforPlayerB"
                android:text="@string/blue_btn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonPink"
                android:textColor="@color/colorButtonText"
                android:onClick="addSixforPlayerB"
                android:text="@string/pink_btn" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorButtonBlack"
                android:textColor="@color/colorButtonText"
                android:onClick="addSevenforPlayerB"
                android:text="@string/black_btn" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="resetScore"
            android:textColor="@color/colorButtonText"
            android:text="@string/reset_btn" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorButtonText"
            android:onClick="undo"
            android:text="@string/undo_btn" />

    </LinearLayout>

</RelativeLayout>